--- a/backServer/vistas/html/add_maintenance.html
+++ b/backServer/vistas/html/add_maintenance.html
@@ -11,7 +11,7 @@
     <nav class="navbar sticky-top">
         <div class="container-fluid no-responsive">
             <a class="navbar-brand" href="/home/flotes">
-                <img src={% static 'img/logo-nav.png' %} alt="Logo" width="120" height="50"
+                <img src={% static 'images/logo-nav.png' %} alt="Logo" width="120" height="50"
                     class="d-inline-block align-text-top">
             </a>
             <ul class="nav justify-content-end">
@@ -33,7 +33,7 @@
         </div>
         <div class="container-fluid responsive">
             <div class="navbar-brand">
-                <img src={% static 'img/logo-nav.png' %} alt="Logo" width="120" height="50"
+                <img src={% static 'images/logo-nav.png' %} alt="Logo" width="120" height="50"
                     class="d-inline-block align-text-top">
             </div>
             <div class="nav justify-content-end">
