--- a/backServer/vistas/html/alerts.html
+++ b/backServer/vistas/html/alerts.html
@@ -11,7 +11,7 @@
     <nav class="navbar sticky-top">
         <div class="container-fluid no-responsive">
             <a class="navbar-brand" href="/home/flotes">
-                <img src={% static 'img/logo-nav.png' %} alt="Logo" width="120" height="50"
+                <img src={% static 'images/logo-nav.png' %} alt="Logo" width="120" height="50"
                     class="d-inline-block align-text-top">
             </a>
             <ul class="nav justify-content-end">
@@ -28,7 +28,7 @@
         <!-- Navegador RESPONSIVE -->
         <div class="container-fluid responsive">
             <a class="navbar-brand" href="../flotes">
-                <img src={% static 'img/logo-nav.png' %} alt="Logo" width="120" height="50"
+                <img src={% static 'images/logo-nav.png' %} alt="Logo" width="120" height="50"
                     class="d-inline-block align-text-top">
             </a>
             <ul class="nav justify-content-end">
@@ -66,6 +66,7 @@
                 <div class="card h-100 text-center">
                     <div class="card-body">
                         <form method="post" enctype="multipart/form-data">
+                            {% csrf_token %}
                             {% for field in alertform %}
                             {{ field.label}}
                             {{ field }}
@@ -90,7 +91,7 @@
                                         return confirm("¿Está seguro que lo desea eliminar?");
                                     }
                                 </script>
-                                <a href="/delete/repair/{{ repair.pk }}" onclick="return confirmarDelete()"
+                                <a href="/delete/alerts/{{ alert.pk }}" onclick="return confirmarDelete()"
                                     class="btn btn-outline-dark1 btn-lg"> <i class="fa-sharp fa-solid fa-xmark"></i></a>
                             </div>
                             {{alert}}
