--- a/backServer/vistas/html/ti_vista-flota.html
+++ b/backServer/vistas/html/ti_vista-flota.html
@@ -11,7 +11,7 @@
 	<nav class="navbar sticky-top" style="z-index: 100;">
 		<div class="container-fluid no-responsive">
 			<a class="navbar-brand" href="/home/flotes">
-				<img src={% static 'img/logo-nav.png' %} alt="Logo" width="120" height="50"
+				<img src={% static 'images/logo-nav.png' %} alt="Logo" width="120" height="50"
 					class="d-inline-block align-text-top">
 			</a>
 			<ul class="nav justify-content-end">
@@ -39,10 +39,9 @@
 		<!-- Navegador RESPONSIVE -->
 		<div class="container-fluid responsive">
 			<a class="navbar-brand" href="../flotes">
-				<img src={% static 'img/logo-nav.png' %} alt="Logo" width="120" height="50"
+				<img src={% static 'images/logo-nav.png' %} alt="Logo" width="120" height="50"
 					class="d-inline-block align-text-top">
 			</a>
-			
 			<button class="responsive float-end btn btn-outline-success me-2" type="button" data-bs-toggle="offcanvas"
 				data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
 				<i class="fa-solid fa-bars"></i>
