--- a/backServer/vistas/html/flota.html
+++ b/backServer/vistas/html/flota.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <!-- Navegador -->
     <nav class="navbar sticky-top">
         <!-- Navegador NO RESPONSIVE -->
         <div class="container-fluid no-responsive">
@@ -76,8 +77,7 @@
             </a>
             <!-- NO ENTIENDO PQ NO FUNCIONA ESTO, LUEGO LO REVISO -->
             <div class="nav justify-content-end"> 
-
-                <button class="responsive float-end btn btn-outline-success me-2" type="button" data-bs-toggle="offcanvas"
+                <button class="nav-item btn btn-outline-success me-2" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <i class="fa-sharp fa-solid fa-bell"></i>
                 </button>
