--- a/backServer/vistas/html/maintenance_history.html
+++ b/backServer/vistas/html/maintenance_history.html
@@ -21,8 +21,8 @@
                         <i class="fa-solid fa-arrow-left"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="btn btn-outline-success me-2" href="../add_repair/{{ code }}"
-                        role="button">Mantenimiento de {{ code }}</a>
+                    <a class="btn btn-outline-success me-2" href="../add_repair/{{ code }}" role="button">Mantenimiento
+                        de {{ code }}</a>
                 </li>
                 <li class="nav-item">
                     <a class="btn btn-outline-success me-2" href="/flotes/add" role="button">Agregar flota</a>
@@ -55,7 +55,7 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item mt-3">
-                                <a class="nav-link active" href="add_repair/{{ flote.code }}">Mantenimiento de 
+                                <a class="nav-link active" href="add_repair/{{ flote.code }}">Mantenimiento de
                                     {{flote.code }}</a>
                             </li>
                             <li class="nav-item mt-3">
