--- a/backServer/vistas/html/flota.html
+++ b/backServer/vistas/html/flota.html
@@ -29,7 +29,8 @@
                 </li> -->
 
                 <li class="nav-item">
-                    <a class="btn btn-outline-success me-2" href="/alerts/{{ flote.code }}" role="button">Agregar alerta</a>
+                    <a class="btn btn-outline-success me-2" href="/alerts/{{ flote.code }}" role="button">Agregar
+                        alerta</a>
                 </li>
 
 
@@ -76,13 +77,18 @@
                     class="d-inline-block align-text-top">
             </a>
             <!-- NO ENTIENDO PQ NO FUNCIONA ESTO, LUEGO LO REVISO -->
-            <div class="nav justify-content-end"> 
+            <div class="nav justify-content-end">
                 <button class="nav-item btn btn-outline-success me-2" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <i class="fa-sharp fa-solid fa-bell"></i>
                 </button>
                 <div class="offcanvas offcanvas-end nav-item" tabindex="-1" id="offcanvasNavbar"
                     aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                        <h4 class="offcanvas-title fw-bold" id="offcanvasNavbarLabel">Terra Ingenieria</h4>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                            aria-label="Close"></i></button>
+                    </div>
                     <!-- HACER JUNTOS ESTO -->
                     {% if notifications %}
                     {% for not in notifications %}
@@ -118,11 +124,11 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item mt-3">
-                                <a class="nav-link active" href="add_repair/{{ flote.code }}"
-                                    role="button">Mantenimiento de {{ flote.code }}</a>
+                                <a class="nav-link active" href="add_repair/{{ flote.code }}">Mantenimiento de {{
+                                    flote.code }}</a>
                             </li>
                             <li class="nav-item mt-3">
-                                <a class="nav-link active" href="repair/{{ flote.code }}" role="button">Historial
+                                <a class="nav-link active" href="repair/{{ flote.code }}">Historial
                                     de {{ flote.code }}</a>
                             </li>
                             <!-- <li class="nav-item mt-3">
@@ -130,7 +136,8 @@
                             </li> -->
 
                             <li class="nav-item mt-3">
-                                <a class="nav-link active" href="/alerts/{{ flote.code }}" role="button">Agregar alerta</a>
+                                <a class="nav-link active" href="/alerts/{{ flote.code }}">Agregar
+                                    alerta</a>
                             </li>
 
                             <li class="nav-item mt-3">
