--- a/backServer/vistas/html/alerts.html
+++ b/backServer/vistas/html/alerts.html
@@ -60,6 +60,7 @@
         </div>
     </nav>
 
+    <!-- CREACION ALERTAS -->
     <div class="container">
         <div class="d-flex justify-content-center mt-3 mb-3">
             <div class="col-10 col-sm-8 col-md-6 col-lg-4 col-xl-4 col-xxl-4 mt-3 mb-3">
@@ -77,6 +78,7 @@
                 </div>
             </div>
         </div>
+
         <!-- HISTORIAL ALERTAS -->
         {% if alerts %}
         {% for alert in alerts %}
@@ -90,14 +92,14 @@
                                 function confirmarDelete() {
                                     return confirm("¿Está seguro que lo desea eliminar?");
                                 }
-                            </script>
+                                </script>
                             <a href="/delete/repair/{{ repair.pk }}" onclick="return confirmarDelete()"
-                                class="btn btn-outline-dark1 btn-lg"> <i class="fa-sharp fa-solid fa-xmark"></i></a>
+                            class="btn btn-outline-dark1 btn-lg"><i class="fa-sharp fa-solid fa-xmark"></i></a>
                         </div>
                         <div class="card-body">
+                            <h5 class="activo mb-3"><b>{{alert.title}}</b></h5>
                             <p><b>{{alert.flote}}</b></p>
                             <p><b>{{alert.limit_date}}</b></p>
-                            <p><b>{{alert.title}}</b></p>
                             <p><b>{{alert.description}}</b></p>
                         </div>
                     </div>
