--- a/backServer/vistas/html/alerts.html
+++ b/backServer/vistas/html/alerts.html
@@ -97,10 +97,10 @@
                             class="btn btn-outline-dark1 btn-lg"><i class="fa-sharp fa-solid fa-xmark"></i></a>
                         </div>
                         <div class="card-body">
-                            <h5 class="activo mb-3"><b>{{alert.title}}</b></h5>
-                            <p><b>{{alert.flote}}</b></p>
-                            <p><b>{{alert.limit_date}}</b></p>
-                            <p><b>{{alert.description}}</b></p>
+                            <h4 class="activo mb-3"><b>{{alert.title}}</b></h3>
+                            <h6 class="mb-3"><b><u>Flota:</u>  {{alert.flote}}</b></h6>
+                            <h6 class="mb-3"><b><u>Fecha límite:</u> {{alert.limit_date}}</b></h6>
+                            <h6 class="mb-3"><b><u>Descrición:</u>  {{alert.description}}</b></h6>
                         </div>
                     </div>
                 </div>
