--- a/backServer/vistas/html/flota.html
+++ b/backServer/vistas/html/flota.html
@@ -34,8 +34,8 @@
                         data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
                         <i class="fa-sharp fa-solid fa-bell"></i>
                     </button>
-                    <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
-                        aria-labelledby="offcanvasWithBothOptionsLabel">
+                    <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1"
+                        id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
                         <div class="offcanvas-header">
                             <h4 class="offcanvas-title fw-bold" id="offcanvasNavbarLabel">Terra Ingenieria</h4>
                             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
@@ -80,8 +80,8 @@
                     data-bs-target="#staticBackdrop" aria-controls="staticBackdrop">
                     <i class="fa-sharp fa-solid fa-bell"></i>
                 </button>
-                <div class="offcanvas offcanvas-end nav-item" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop"
-                    aria-labelledby="staticBackdropLabel">
+                <div class="offcanvas offcanvas-end nav-item" data-bs-backdrop="static" tabindex="-1"
+                    id="staticBackdrop" aria-labelledby="staticBackdropLabel">
                     <div class="offcanvas-header">
                         <h4 class="offcanvas-title fw-bold" id="staticBackdropLabel">Terra Ingenieria</h4>
                         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
@@ -111,8 +111,8 @@
                     data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling">
                     <i class="fa-solid fa-bars"></i>
                 </button>
-                <div class="offcanvas offcanvas-end nav-item" data-bs-scroll="false" tabindex="-1" id="offcanvasScrolling"
-                    aria-labelledby="offcanvasScrollingLabel">
+                <div class="offcanvas offcanvas-end nav-item" data-bs-scroll="false" tabindex="-1"
+                    id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
                     <div class="offcanvas-header">
                         <h4 class="offcanvas-title fw-bold" id="offcanvasScrollingLabel">Terra Ingenieria</h4>
                         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
