--- a/backServer/vistas/html/maintenance_history.html
+++ b/backServer/vistas/html/maintenance_history.html
@@ -88,13 +88,14 @@
                             class="btn btn-outline-dark btn-lg"> <i class="fa-sharp fa-solid fa-xmark"></i></a>
                     </div>
                     <div class="card-body">
-                        <p><b>{{ repair.type }}</b></p>
-                        <p><b>{{ repair.date }}</b></p>
-                        <p><b>{{ repair.milage }}</b></p>
-                        <p><b>{{ repair.description }}</b></p>
-                        <p><b>{{ repair.cost }}</b></p>
-                        <p><b>{{ repair.oil }}</b></p>
-                        <p><b>{{ repair.filter }}</b></p>
+                        <h3 class="mb-3"><b>{{ repair.type }}</b></h3>
+                        <h5 class="mb-3"><b><u>Fecha de creación:</u> {{ repair.date }}</b></h5>
+                        <h5 class="mb-3"><b><u>Kilometraje:</u>  {{ repair.mileage }}</b></h5>
+                        <!-- LA DESCRIPCION TIENE UN LIMITE PARA ESCRIBIR, PONER UN LIMITE MAS ALTO DE LETRAS -->
+                        <h5 class="mb-3"><b><u>Descripción:</u>  {{ repair.description }}</b></h5> 
+                        <h5 class="mb-3"><b><u>Costo:</u>  {{ repair.cost }}</b></h5>
+                        <h5 class="mb-3"><b>{{ repair.oil }}</b></h5>
+                        <h5 class="mb-3"><b>{{ repair.filter }}</b></h5>
                     </div>
                 </div>
             </div>
