--- a/backServer/vistas/html/maintenance_history.html
+++ b/backServer/vistas/html/maintenance_history.html
@@ -90,7 +90,7 @@
                     <div class="card-body">
                         <p><b>{{ repair.type }}</b></p>
                         <p><b>{{ repair.date }}</b></p>
-                        <p><b>{{ repair.milage }}</b></p>
+                        <p><b>{{ repair.mileage }}</b></p>
                         <p><b>{{ repair.description }}</b></p>
                         <p><b>{{ repair.cost }}</b></p>
                         <p><b>{{ repair.oil }}</b></p>
