--- a/backServer/vistas/html/alerts.html
+++ b/backServer/vistas/html/alerts.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-
 <head>
     <link rel="stylesheet" type="text/css" href={% static 'css/alerts.css' %}?{% now "U" %}>
 </head>
@@ -91,7 +90,7 @@
                                     return confirm("¿Está seguro que lo desea eliminar?");
                                 }
                             </script>
-                            <a href="/delete/repair/{{ repair.pk }}" onclick="return confirmarDelete()"
+                            <a href="/delete/alerts/{{ alert.pk }}" onclick="return confirmarDelete()"
                                 class="btn btn-outline-dark1 btn-lg"> <i class="fa-sharp fa-solid fa-xmark"></i></a>
                         </div>
                         <div class="card-body">
