--- a/backServer/vistas/html/flota.html
+++ b/backServer/vistas/html/flota.html
@@ -43,18 +43,17 @@
                         </div>
                         {% if notifications %}
                         {% for not in notifications %}
-                        <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-end">
-                            <div class="alert alert-dark fade show" style="padding-bottom: .1rem;" role="alert"
+                        <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center">
+                            <div class="alert alert-dark fade show col-11 col-sm-11 col-md-11 col-lg-11 col-xl-11 col-xxl-11" style="padding-bottom: .1rem;" role="alert"
                                 aria-live="assertive" aria-atomic="true">
                                 <div class="d-flex justify-content-end">
                                     <button type="button" class="btn-close" data-bs-dismiss="alert"
                                         aria-label="Close"></button>
                                 </div>
-                                <h2> {{ not.title }}</h2>
-                                <!-- HABRIA QUE VER PQ APARECE UNA MAS CHICA QUE LA OTRA Y CORREGIR ESO -->
-                                <p class="fw-normal" id="messages">
+                                <h2>{{ not.title }}</h2>
+                                <h5 class="fw-normal" id="messages">
                                     {{ not.msg }}
-                                </p>
+                                </h5>
                                 <br>
                             </div>
                         </div>
@@ -89,18 +88,18 @@
                     </div>
                     {% if notifications %}
                     {% for not in notifications %}
-                    <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-end">
-                        <div class="alert alert-dark fade show" style="padding-bottom: .1rem;" role="alert"
+                    <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center">
+                        <div class="alert alert-dark fade show col-11 col-sm-11 col-md-11 col-lg-11 col-xl-11 col-xxl-11" style="padding-bottom: .1rem;" role="alert"
                             aria-live="assertive" aria-atomic="true">
                             <div class="d-flex justify-content-end">
                                 <button type="button" class="btn-close" data-bs-dismiss="alert"
                                     aria-label="Close"></button>
                             </div>
                             <h2> {{ not.title }}</h2>
-                            <p class="fw-normal" id="messages">
+                            <h5 class="fw-normal" id="messages">
                                 {{ not.msg }}
                                 <br>
-                            </p>
+                            </h5>
                         </div>
                     </div>
                     {% endfor%}
