--- a/backServer/vistas/html/ti_ingreso.html
+++ b/backServer/vistas/html/ti_ingreso.html
@@ -26,7 +26,7 @@
 							<label for="floatingPassword">Contraseña</label>
 							<i class="bi bi-eye-slash" id="togglePassword"></i>
 						</div>
-						<div class="text-center">
+						<div class="text-center mt-3">
 							<button type="submit" value="Ingresar" class="btn btn-outline-dark">Ingresar</button>
 						</div>
 						<script>
