--- a/backServer/vistas/html/flota.html
+++ b/backServer/vistas/html/flota.html
@@ -121,8 +121,8 @@
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item mt-3">
                                 <!-- ARREGLAR -->
-                                <a class="nav-link active" href="add_repair/{{ flote.code }}">Mantenimiento de {{
-                                    flote.code }}</a>
+                                <a class="nav-link active" href="add_repair/{{ flote.code }}">Mantenimiento 
+                                    de {{ flote.code }}</a>
                             </li>
                             <li class="nav-item mt-3">
                                 <a class="nav-link active" href="repair/{{ flote.code }}">Historial
