--- a/backServer/vistas/html/alerts.html
+++ b/backServer/vistas/html/alerts.html
@@ -107,5 +107,8 @@
         </div>
         {% endfor %}
         {% endif %}
+        <!-- <footer>
+            <p>&copy; 2023 Terra Ingenieria</p>
+        </footer> -->
     </body>
 {% endblock content %}
