--- a/backServer/vistas/html/maintenance_history.html
+++ b/backServer/vistas/html/maintenance_history.html
@@ -101,5 +101,8 @@
         </div>
     </div>
     {% endfor %}
+    <!-- <footer>
+        <p>&copy; 2023 Terra Ingenieria</p>
+    </footer> -->
 </body>
 {% endblock content %}
