--- a/backServer/vistas/html/ti_ingreso.html
+++ b/backServer/vistas/html/ti_ingreso.html
@@ -46,6 +46,9 @@
 				</form>
 			</div>
 		</div>
+		<!-- <footer>
+			<p>&copy; 2023 Terra Ingenieria</p>
+		</footer> -->
 	</div>
 </body>
 {% endblock %}
