--- a/backServer/vistas/html/add_flote.html
+++ b/backServer/vistas/html/add_flote.html
@@ -100,6 +100,9 @@
             </div>
         </div>
     </div>
+    <!-- <footer>
+        <p>&copy; 2023 Terra Ingenieria</p>
+    </footer> -->
 </body>
 
 {% endblock content %}
