--- a/backServer/vistas/html/maintenance_history.html
+++ b/backServer/vistas/html/maintenance_history.html
@@ -20,6 +20,7 @@
                     <a class="nav-item btn btn-outline-success me-2" href="../{{ code }}" role="button">
                         <i class="fa-solid fa-arrow-left"></i></a>
                 </li>
+                {% if correct_group %}
                 <li class="nav-item">
                     <a class="btn btn-outline-success me-2" href="../add_repair/{{ code }}" role="button">Mantenimiento
                         de {{ code }}</a>
@@ -27,6 +28,7 @@
                 <li class="nav-item">
                     <a class="btn btn-outline-success me-2" href="/flotes/add" role="button">Agregar flota</a>
                 </li>
+                {% endif %}
                 <li class="nav-item">
                     <a class="btn btn-outline-success me-2" type="button" href="/logout" role="button">Cerrar Sesión</a>
                 </li>
